--- a/index.html
+++ b/index.html
@@ -5,20 +5,15 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>xyz</title>
-   <link rel="icon" href="favicon.ico">
+   <link rel="icon" href="assets/favicon.ico">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+   <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
-   <script>
-	   alert("Buat kamu yang entah sengaja atau gak sengaja buka halaman ini,,")
-	   alert("Aku cuma mau ngingetin sesuatu..")
-	   alert("Tetep semangat ya ...")
-	   alert("Tetep kuat")
-	   alert("Tetep jaga kesehatan")
-	   alert("Udah itu aja .")
-	   alert("Eh bentar, ada satu lagi..")
-	   alert("Jangan Lupa Tersenyum Hari Ini :)")
-   </script>
+   <button class="btn">Klik</button>
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+   <script src="assets/script.js"></script>
 </body>
 
 </html>
