--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
+	<div class="split left"></div>
+	<div class="split right"></div>
+
    <button class="btn">Klik</button>
+   
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
    <script src="assets/script.js"></script>
 </body>
