--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>xyz</title>
-   <link rel="icon" href="assets/favicon.ico">
+   <link rel="icon" href="assets/img/favicon.ico">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-   <link rel="stylesheet" href="assets/style.css">
+   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-	<div class="split left"></div>
-	<div class="split right"></div>
+   <div class="container" id="container">   
+   	<div class="split left"></div>
+   	<div class="split right"></div>
 
-   <button class="btn">Klik</button>
+      <button class="btn">Klik</button>
+   </div>
    
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-   <script src="assets/script.js"></script>
+   <script src="assets/js/particles.js"></script>
+   <script src="assets/js/app.js"></script>
+   <script src="assets/js/script.js"></script>
 </body>
 
 </html>
