--- a/index.html
+++ b/index.html
@@ -4,24 +4,33 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>xyz</title>
+   <title>Login</title>
    <link rel="icon" href="assets/img/favicon.ico">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-   <link rel="stylesheet" href="assets/css/style.css">
+   <link rel="stylesheet" href="assets/css/login.css">
 </head>
 
 <body>
-   <div class="container" id="container">   
-   	<div class="split left"></div>
-   	<div class="split right"></div>
-
-      <button class="btn">Klik</button>
+   <div class="container" id="container">
+      <div class="split left"></div>
+      <div class="split right"></div>
+      <div class="box">
+         <div class="header">
+            <h2>Login</h2>
+         </div>
+         <div class="main">
+            <input type="password" placeholder="Password" class="pw" id="pw">
+            <input type="checkbox" name="cek" id="cek" class="cek" onclick="showPassword()">
+            <label for="cek">Show Password</label>
+            <p class="error">Password Salah</p>
+            <button onclick="login()">Submit</button>
+         </div>
+      </div>
    </div>
-   
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
    <script src="assets/js/particles.js"></script>
    <script src="assets/js/app.js"></script>
-   <script src="assets/js/script.js"></script>
+   <script src="assets/js/login.js"></script>
 </body>
 
 </html>
