--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                <input type="password" placeholder="Password" class="pw" id="pw">
                <input type="checkbox" name="cek" id="cek" class="cek" onclick="showPassword()">
                <label for="cek">Show Password</label>
-               <p class="error">Password Salah</p>
-               <button class="btn" onclick="login()">Submit</button>
+               <p>Password Salah</p>
+               <button type="submit">Submit</button>
             </form>
          </div>
       </div>
