--- a/home.html
+++ b/home.html
@@ -15,7 +15,9 @@
    	<div class="split left"></div>
    	<div class="split right"></div>
       <button class="btn">Klik</button>
+      <i class="fas fa-sign-out-alt logout"></i>
    </div>
+   <p></p>
    
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
    <script src="assets/js/particles.js"></script>
