--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
    	<div class="split left"></div>
    	<div class="split right"></div>
       <button class="btn">Klik</button>
+      <button class="logout">Logout</button>
    </div>
    
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
