--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
             <h2>Login</h2>
          </div>
          <div class="main">
-            <input type="password" placeholder="Password" class="pw" id="pw">
-            <input type="checkbox" name="cek" id="cek" class="cek" onclick="showPassword()">
-            <label for="cek">Show Password</label>
-            <p>Password Salah</p>
-            <button type="submit">Submit</button>
+            <form action="./home.html" method="POST">
+               <input type="password" placeholder="Password" class="pw" id="pw">
+               <input type="checkbox" name="cek" id="cek" class="cek" onclick="showPassword()">
+               <label for="cek">Show Password</label>
+               <p>Password Salah</p>
+               <button type="submit">Submit</button>
+            </form>
          </div>
       </div>
    </div>
