--- a/home.html
+++ b/home.html
@@ -14,7 +14,8 @@
    <div class="container" id="container">   
    	<div class="split left"></div>
    	<div class="split right"></div>
-      <button class="btn">Klik</button>
+      <button class="btn btn-1">Card</button>
+      <button class="btn btn-2">Klik</button>
       <button class="logout">Logout</button>
    </div>
    
